# assignment-test

./: .clang-format  .gitignore  CMakeLists.txt  README.md  assignment.conf  run-grading.sh
.devcontainer/: Dockerfile  devcontainer.json
src/: CMakeLists.txt  assignment_start.h  main.c  wrap.h
src/testing/: alloc.c  alloc.h  cmocka.h  common.h  wrap.h
